# dynamodb-lease

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
scripts/: init-test.sh
src/: builder.rs  client.rs  lease.rs  lib.rs  local.rs
tests/: usage.rs
tests/util/: mod.rs  retry.rs
